--- a/components/header/mobile-menu/mobileMenu.module.scss
+++ b/components/header/mobile-menu/mobileMenu.module.scss
@@ -10,10 +10,10 @@
   .menuToggle
   {
     display: block;
-    position: relative;
-    top: 0;
-    left: 100%;
-    width: 18%;
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    width: 30px;
     z-index: 1;
 
     -webkit-user-select: none;
@@ -24,7 +24,8 @@
   {
     text-decoration: none;
     color: #232323;
-
+    margin: 10px 0;
+    display: flex;
     transition: color 0.3s ease;
   }
 
@@ -33,7 +34,7 @@
   {
     display: block;
     width: 40px;
-    height: 32px;
+    height: 40px;
     position: absolute;
     top: -7px;
     left: -5px;
@@ -53,7 +54,7 @@
     background: #cdcdcd;
     display: block;
     width: 100%;
-    height: 4px;
+    height: 3px;
     margin-bottom: 5px;
     position: relative;
     border-radius: 3px;
@@ -109,10 +110,9 @@
   .menu
   {
     position: absolute;
-    width: 0;
-    height: 0;
+  
     top: -100%;
-    padding: 160% 70%;
+    padding: 2.5rem 3rem;
 
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
@@ -135,14 +135,15 @@
    */
   .menuToggle input:checked ~ .menu
   {
-    width: 80vw;
-    height: 50vh;
+    width: auto;
+    height: auto;
     background: $mobile-menu-background-color;
-    transform: translate(-68vw, 0);
+    transform: translate(-73%, 0);
 
     li {
       visibility: visible;
       border-bottom: solid;
+      width: 100%;
     }
   }
 }
